@@ -1,6 +1,6 @@
 Package: spgwr
-Version: 0.4-6
-Date: 2007-08-22
+Version: 0.4-7
+Date: 2007-10-31
 Title: Geographically weighted regression
 Author: Roger Bivand and Danlin Yu
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
